applying bootstrap on header

--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>PIZZA ORDERING</title>
 </head>
 <body>
-    
+ <div  class="jumbotron ">
+        <h1> PIZZA SHOP</h1></div>
+        <div class="kes">
+
+<img src="images/p1.jpg" class="slide-1" >
+  <img src="images/w.jpg" class="slide-2">
+  <img src="images/p2.jpg" class="slide-3">
+</div>
+<div class="container">
+<div class="row">
+  <div class="col-md-1">...</div>
+  </div>
+
+
+  </div>
+ 
+ 
 </body>
 </html>
