adding types of pizza

--- a/index.html
+++ b/index.html
@@ -5,22 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@500&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>PIZZA ORDERING</title>
+   
+    <script
+    src="https://code.jquery.com/jquery-3.5.1.js"
+    integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+    crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
+   
+    <title> PIZZA ORDERING</title>
 </head>
 <body>
  <div  class="jumbotron ">
-        <h1> PIZZA SHOP</h1></div>
+        <h1>LAMPI PIZZA SHOP</h1></div>
+
         <div class="kes">
 
 <img src="images/p1.jpg" class="slide-1" >
   <img src="images/w.jpg" class="slide-2">
   <img src="images/p2.jpg" class="slide-3">
 </div>
+
 <div class="container">
+  <br></br>
+  <h1>TYPES OF PIZZA WE HAVE AND PRICE:</h1><br><br><br>
 <div class="row">
-  <div class="col-md-1">...</div>
+  <div class="col-md-4"><h2> Cheese Pizza</h2><img src="images/c1.jpg" width="70%" height="70%"></div>
+  <div class="col-md-4"> <h2> Veggie Pizza</h2><img src="images/c2.jpg" width="70%" height="70%"> </div>
+  <div class="col-md-4"><h2> Pepperoni Pizza</h2><img src="images/c3.jpeg" width="70%" height="70%"></div>
+
   </div>
+  <div class="row">
+    <div class="col-md-4"><h2> Meat Pizza</h2><img src="images/c4.jpg" width="70%" height="70%"></div>
+    <div class="col-md-4"> <h2> Margherita Pizza</h2><img src="images/c5.jpeg" width="70%" height="70%"> </div>
+    <div class="col-md-4"><h2> BBQ Chicken Pizza</h2><img src="images/c6.jpg" width="70%" height="70%"></div>
+  
+    </div>
 
 
   </div>
