styling flip card

--- a/index.html
+++ b/index.html
@@ -31,21 +31,26 @@
   <br></br>
   <h1>TYPES OF PIZZA WE HAVE AND PRICE:</h1><br><br><br>
 <div class="row">
-  <div class="col-md-4"><h2> Cheese Pizza</h2><img src="images/c1.jpg" width="70%" height="70%"></div>
-  <div class="col-md-4"> <h2> Veggie Pizza</h2><img src="images/c2.jpg" width="70%" height="70%"> </div>
-  <div class="col-md-4"><h2> Pepperoni Pizza</h2><img src="images/c3.jpeg" width="70%" height="70%"></div>
 
-  </div>
-  <div class="row">
-    <div class="col-md-4"><h2> Meat Pizza</h2><img src="images/c4.jpg" width="70%" height="70%"></div>
-    <div class="col-md-4"> <h2> Margherita Pizza</h2><img src="images/c5.jpeg" width="70%" height="70%"> </div>
-    <div class="col-md-4"><h2> BBQ Chicken Pizza</h2><img src="images/c6.jpg" width="70%" height="70%"></div>
+<div class="col-md-4">
+  <div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
   
-    </div>
+  <h2> Cheese Pizza</h2>
+  <img src="images/c1.jpg" width="70%" height="70%"><br><br>
 
+</div>
+<div class="flip-card-back">
+  <h3>Cheese Pizza</h3>
+  <p>Big pizza:10,000rwf</p>
+  <p>Medium pizza:5,000rwf</p>
+  <p>Small pizza :2,500rwf</p>
 
+</div>
+</div>
   </div>
- 
+ </div>
  
 </body>
 </html>
