--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ IF YOU NEED IT THE DOOR IS OPEN WELCOME <br>IN HARI HARI AND HAVE JOY WITH PEACE
     <br><br>
     <center>
 
-    <h7>IF YOU NEED PIZZA MAKE ORDER WITH US PLEASE!!!!</h7></center>
+    <h7>FILL FORM TO ORDER YOURS</h7></center>
 
 <div class=" bg-img">
   
@@ -325,7 +325,7 @@ IF YOU NEED IT THE DOOR IS OPEN WELCOME <br>IN HARI HARI AND HAVE JOY WITH PEACE
   <option label="Flatbread" value="23">Flatbread</option>
   <option label="Thin Crust" value="47">Thin Crust</option>
 </select>
-<br><label><h9> Enter the Quantity of Pizza you need </h9></label><br>
+<br><label><h9> Enter the Quantity of Pizza you need</h9></label><br>
 <input value="" required placeholder="number of pizza" id="quantity"></input><br>
 <div class="button">
  
