adding contact section

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ IF YOU NEED IT THE DOOR IS OPEN WELCOME <br>IN HARI HARI AND HAVE JOY WITH PEACE
     <br><br>
     <center>
 
-    <h7>FILL FORM TO ORDER YOURS</h7></center>
+    <h7>FILL  THIS FORM TO ORDER YOUR PIZZA</h7></center>
 
 <div class=" bg-img">
   
@@ -340,6 +340,33 @@ IF YOU NEED IT THE DOOR IS OPEN WELCOME <br>IN HARI HARI AND HAVE JOY WITH PEACE
   </div>
 </div>
 
- 
+<br><br>
+ <div> 
+  <h1> CONTACT US</h1>
+  <br><br><br>
+<div class="row">
+<div class="col-md-4">
+<h7>ADDRESS</h7><br><br>
+RWAMAGANA DISTRICT<br>
+KIGABIRO SECTOR<br>
+EASTERN PROVINCE
+</div>
+
+<div class="col-md-4">
+  <h7>PHONE</h7><br><br>
+HOME PHONE: 0782457543<br>
+WORK PHONE: 0783210000<br>
+OTHER: 07376786534
+  </div>
+
+  <div class="col-md-4">
+    <h7>SOCIAL MEDIA</h7><br><br>
+    EMAIL:Bshabani120@daviscollege.com<br>
+    FACEBOOK:                    <br>
+    LINKDIN:
+    </div>
+    
+
+</div>
 </body>
 </html>
