--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ IF YOU NEED IT THE DOOR IS OPEN WELCOME <br>IN HARI HARI AND HAVE JOY WITH PEACE
 
 
 <label><h9> Select your pizza Crust </h9></label><br>
-<select class="crust" id="crust" required><br>
+<select class="crust" id="crus" required><br>
   <option label="Sicilian Style" value="130">Sicilian Style</option>
   <option label="Neapolitan Crust" value="130">Neapolitan Crust</option>
   <option label="Pizza Bagels" value="130">Pizza Bagels</option>
@@ -326,7 +326,7 @@ IF YOU NEED IT THE DOOR IS OPEN WELCOME <br>IN HARI HARI AND HAVE JOY WITH PEACE
   <option label="Thin Crust" value="130">Thin Crust</option>
 </select>
 <br><label><h9> Enter the Quantity of Pizza you need</h9></label><br>
-<input value="" required placeholder="enter number you want" id="quantity"></input><br>
+<input value="" required placeholder="enter number you want" id="quota"></input><br>
 <div class="button">
  
 </div>
@@ -379,5 +379,6 @@ OTHER: 07376786534</p1>
       </div>
     
 </div>
+
 </body>
 </html>
